<resources>
    <string name="app_name">HH Custom Tailor</string>
    <string name="register">Register Now</string>
    <string name="sign_in">Sign in</string>
    <string name="explore">Explore</string>
    <string name="join">Join</string>
    <string name="email">Email</string>
    <string name="alternate_email">Alternate email</string>
    <string name="password">Password</string>
    <string name="new_password">New password</string>
    <string name="signIn_forgot_pass">Forgot Password?</string>
    <string name="signin_text">Sign in with email and password.</string>
    <string name="next">Next</string>
    <string name="cnf_passowrd">Confirm password</string>
    <string name="generate_cnf_passowrd">Confirm password</string>
    <string name="change_pass_head">Change password</string>
    <string name="change_pass_sub_head">Change your password</string>
    <string name="we_are_here">We are here</string>
    <string name="hht_fullname">Heritage House</string>
    <string name="hht_address">64/18, Sukhumvit Soi 20,\nKlongtoey, Thailand</string>
    <string name="cart_item_details">Cart Item Details</string>
    <string name="selected_items">Selected Items</string>
    <string name="ordered_item_details">Item Details</string>
    <string name="timeOut">Request timed out check your internet connection and try again</string>
    <string name="serverError">Server is down for maintenance sorry for inconvenience.</string>
    <string name="internet">No internet connection. Please check your connectivity and try again.</string>
    <string name="try_again">Data not found. Please try again.</string>
    <string name="state_error">State list not found. Please enter your state name.</string>
    <string name="city_not_found_error">Selected country is not serviceable. Please select different country.</string>
    <string name="delete_content">Are you sure want to delete?</string>
    <string name="splash_text">Self Confidence.\nCustom Tailored.</string>
    <string name="forgotPass">Forgot Password</string>
    <string name="change_Pass_text">Please enter your registered email.</string>
    <string name="emailTxt">Enter Email which was used to create HH Tailor Account.</string>
    <string name="signup">Sign up</string>
    <string name="sign_up_txt">Sign up with name, email and password.</string>
    <string name="Firstname">First name</string>
    <string name="Lastname">Last name</string>
    <string name="name">Name</string>
    <string name="invalid_userName">Please enter your name.</string>
    <string name="signup_email_err">Please enter your email.</string>
    <string name="invalid_email">Please enter your registered email.</string>
    <string name="invalid_phoneno">Please enter valid phone no.</string>
    <string name="invalid_password">Please enter valid password.</string>
    <string name="invalid_cnfpassword">Please enter confirm password.</string>
    <string name="cnf_passwrd">Entered passwords do not match.</string>
    <string name="one">1</string>
    <string name="two"><b>/2</b></string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="faqs">FAQs</string>
    <string name="privacy_policy_content1">Heritage House is committed to respecting the privacy rights of our customers and all visitors to our website. Any payment information you send us when submitting your "shop online" order is transmitted securely over the Internet from your computer to our bank\'s server.\nWhen you place an order, we need to know your name, email address, mailing address, credit card number, and expiration date. Your information will only be used to process, track and ship your order. This data (with the exception of your credit card information) will be retained with Heritage House for customer service purposes, and to inform customers of additional services and promotions that will be launched from time to time. Customer information will not be shared or sold to third parties. With respect to the customer\'s privacy, we have taken every consideration to protect your privacy, while providing you with a great online shopping experience.</string>
    <string name="security_incaps">SECURITY</string>
    <string name="privacy_policy_content2">The security of your personal information is important to us. When you enter sensitive information such as a credit card number while ordering with us, we encrypt the transmission of that information using secure socket layer technology (SSL).\nChanges To This Policy – We may update the privacy policy from time to time depending upon the feedback we receive from customers and market survey in the best interest of our business. We may update this privacy policy to reflect changes to our information practices. If any information changes we will notify you by email or by means of a short notice on this website prior to the changes become effective. Please do periodically review this page for the latest information on our privacy practices.</string>
    <string name="additional_information">ADDITIONAL INFORMATION</string>
    <string name="privacy_policy_content3">Testimonials or endorsements from our customers may be displayed on our website or on our social media platforms. We will contact you to receive approval if we are able to post your testimonial with your name.</string>
    <string name="info_sharing_and_disclosure">INFORMATION SHARING AND DISCLOSURE</string>
    <string name="privacy_policy_content4">Personal information collected through the use of our website is not shared with unaffiliated third parties. However, we must provide a certain extent of information to our employees, contractors, and agents such as our logistics provider, for them to complete necessary services.</string>
    <string name="changing_or_deleting_your_info">CHANGING OR DELETING YOUR INFORMATION</string>
    <string name="privacy_policy_content5">If you contact us by email through our website, we may keep a record of your contact information and correspondence in order to respond to you, as well as to send you periodic information about our products and services. Your information will not be shared with outside parties.\nIf you would like to change your personally identifiable information please feel free to email us at info@hhcustomtailor.com</string>
    <string name="faq_ques_one">Why do I need to register? Do I need to register?</string>
    <string name="faq_ques_two">How do I define my own style?</string>
    <string name="faq_ques_three">Can I change any stylistic features within a look offered in the Effortlessly Stylish section?</string>
    <string name="faq_ques_four">How can I get the color I need which is not shown in the website?</string>
    <string name="faq_ques_five">How can I be sure that my measurements are correct?</string>
    <string name="faq_ques_six">Can I make any changes after I have placed the order?</string>
    <string name="faq_ques_seven">How do you ship the order?</string>
    <string name="faq_ques_eight">What is your return policy?</string>
    <string name="faq_ques_nine">Can I cancel my order?</string>
    <string name="faq_ques_ten">TI lost the Trousers to my last Three Piece Suit I ordered from you, can I reorder just the Trousers?</string>
    <string name="faq_ques_eleven">How do I contact you?</string>
    <string name="faq_ans_one">The registration process is a very simple one and was only created to ease the customer’s online shopping experience. In doing so, it will help the customer pull up, update and track their orders more efficiently. Apart from a customer’s credit card information, which is never stored on the server, information such as name, address, and measurements are stored for the customer to manage future orders. Please read the section titled “Privacy Policy” to determine how your personal information is handled.</string>
    <string name="faq_ans_two">If you would like us to custom make garments to a style not displayed or available on our website, please email us an image to further discuss the possibility to create an item truly unique to you. You can reach us via email, phone or WhatsApp for more information and assistance you may need in regards to styles.</string>
    <string name="faq_ans_three">This range of collections is exclusively designed based on our in-house research and accumulative experience. The fabric selections were also short listed via a combination of trends and a cohesiveness aspect to any fabric selected within a look. The fabrics can surely be selected as per your preference, but we had wished to maintain the design factors to complete the look. If perhaps you may like to change any design elements within a look, please send us an email or make a comment upon checking out, and we will surely accommodate the changes in the design elements accordingly.</string>
    <string name="faq_ans_four">It may be possible that a particular color or fabric pattern is not included on our website. Please email us and give us an indication of which types or colors of fabric patterns you prefer, and we will gladly email you some samples for your further selection.</string>
    <string name="faq_ans_five">Heritage House has created a simple, yet very effective and user friendly method which guides you through the sizing component of your shopping experience. The engine behind the important questions we ask and the correct answers we receive, is a formalized version of the large data set of information that we have accumulated over time and experience, and have created algorithmic full body measurement sets that is eventually unique to each person.</string>
    <string name="faq_ans_six">In the case where a customer would like to make some changes to the styles, type of fabric or colors chosen, after placing an order, the status of the order will have to be checked by us (Heritage House) prior to confirming the changes. It would undoubtedly be a priority for us to try and incorporate any changes that are made post ordering to the best of our abilities. Please feel free to email us at info@hhcustomtailor.com asap if any changes may be required after an order is placed.</string>
    <string name="faq_ans_seven">All orders are shipped using premium courier services such as DHL, FedEx, UPS, to name a few.</string>
    <string name="faq_ans_eight">Heritage House will take great care in maintaining total customer satisfaction and retaining customer loyalty. Should there be an inadvertent error made on our part, please email us and we will do all the necessary adjustments and/or replacements and reship the order to the customer. Any claims to the order need to be informed to us within 30 days after receiving the items. Please email us your concerns and our customer service team will immediately get back to you with the next process.</string>
    <string name="faq_ans_nine">An order having been placed cannot be cancelled. This is because once an order is placed, patterns are exclusively made and fabrics are cut as per the commissioned order for each individual as per the selected styles and measurements. For more specific answers to your questions about our return policy, please feel free to email us at info@hhcustomtailor.com.</string>
    <string name="faq_ans_ten">Yes absolutely, from your account dashboard, you have the ability to view and reorder any item from your order history.</string>
    <string name="faq_ans_eleven">If you have any questions, comments or feedback for us, please email us at info@hhcustomtailor.com or contact us at our Customer Service Department WhatsApp number (66) 81-311-1405 any time from Monday to Saturday between 9.30 am to 6.30pm (GMT/UTC+7 hours) or please email us your contact number and we will call you.\nYou can also reach us at:\nHeritage House/R&amp;R Apparel International Co. Ltd.\n64/18 Sukhumvit Road , Soi 20\nKlongtoei, Bangkok 10110\nThailand\nTel : (66) 260 7454</string>
</resources>