<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.FAQActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        android:src="@drawable/hhtlogo" />

    <ImageView
        android:id="@+id/faqBackbtn"
        android:layout_width="@dimen/_40sdp"
        android:layout_height="@dimen/_40sdp"
        android:padding="@dimen/_3sdp"
        android:src="@drawable/left"/>

    <TextView
        android:id="@+id/privacy_policy_heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/faqBackbtn"
        android:layout_marginStart="@dimen/_35sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_25sdp"
        android:fontFamily="@font/lato_bold"
        android:text="@string/faqs"
        android:textColor="@color/App_color_dark_grey"
        android:textSize="@dimen/_25sdp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/privacy_policy_heading"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_10sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/faq_background"
                android:layout_marginTop="@dimen/_10sdp"
                android:padding="@dimen/_5sdp">
                <TextView
                    android:id="@+id/faq_ques_one"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lato_bold"
                    android:textColor="@color/App_color_dark_grey"
                    android:textSize="@dimen/_13sdp"
                    android:text="@string/faq_ques_one"
                    />
                <TextView
                    android:id="@+id/faq_ans_one"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lato_regular"
                    android:textColor="@color/App_color_dark_grey"
                    android:textSize="@dimen/_11sdp"
                    android:text="@string/faq_ans_one"
                    android:layout_below="@+id/faq_ques_one"
                    android:layout_marginTop="@dimen/_5sdp"
                    />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/faq_background"
                android:layout_marginTop="@dimen/_10sdp"
                android:padding="@dimen/_5sdp">
                <TextView
                    android:id="@+id/faq_ques_two"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lato_bold"
                    android:textColor="@color/App_color_dark_grey"
                    android:textSize="@dimen/_13sdp"
                    android:text="@string/faq_ques_two"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lato_regular"
                    android:textColor="@color/App_color_dark_grey"
                    android:textSize="@dimen/_11sdp"
                    android:layout_below="@id/faq_ques_two"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:text="@string/faq_ans_two"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/faq_background"
                android:layout_marginTop="@dimen/_10sdp"
                android:padding="@dimen/_5sdp">
                <TextView
                    android:id="@+id/faq_ques_three"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lato_bold"
                    android:textColor="@color/App_color_dark_grey"
                    android:textSize="@dimen/_13sdp"
                    android:text="@string/faq_ques_three"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lato_regular"
                    android:textColor="@color/App_color_dark_grey"
                    android:textSize="@dimen/_11sdp"
                    android:layout_below="@+id/faq_ques_three"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:text="@string/faq_ans_three"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/faq_background"
                android:layout_marginTop="@dimen/_10sdp"
                android:padding="@dimen/_5sdp">
                <TextView
                    android:id="@+id/faq_ques_four"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lato_bold"
                    android:textColor="@color/App_color_dark_grey"
                    android:textSize="@dimen/_13sdp"
                    android:text="@string/faq_ques_four"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lato_regular"
                    android:textColor="@color/App_color_dark_grey"
                    android:textSize="@dimen/_11sdp"
                    android:layout_below="@+id/faq_ques_four"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:text="@string/faq_ans_four"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/faq_background"
                android:layout_marginTop="@dimen/_10sdp"
                android:padding="@dimen/_5sdp">
                <TextView
                    android:id="@+id/faq_ques_five"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lato_bold"
                    android:textColor="@color/App_color_dark_grey"
                    android:textSize="@dimen/_13sdp"
                    android:text="@string/faq_ques_five"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lato_regular"
                    android:textColor="@color/App_color_dark_grey"
                    android:textSize="@dimen/_11sdp"
                    android:layout_below="@+id/faq_ques_five"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:text="@string/faq_ans_five"
                    />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/faq_background"
                android:layout_marginTop="@dimen/_10sdp"
                android:padding="@dimen/_5sdp">
                <TextView
                    android:id="@+id/faq_ques_six"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lato_bold"
                    android:textColor="@color/App_color_dark_grey"
                    android:textSize="@dimen/_13sdp"
                    android:text="@string/faq_ques_six"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lato_regular"
                    android:textColor="@color/App_color_dark_grey"
                    android:textSize="@dimen/_11sdp"
                    android:layout_below="@+id/faq_ques_six"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:text="@string/faq_ans_six"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/faq_background"
                android:layout_marginTop="@dimen/_10sdp"
                android:padding="@dimen/_5sdp">
                <TextView
                    android:id="@+id/faq_ques_seven"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lato_bold"
                    android:textColor="@color/App_color_dark_grey"
                    android:textSize="@dimen/_13sdp"
                    android:text="@string/faq_ques_seven"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lato_regular"
                    android:textColor="@color/App_color_dark_grey"
                    android:textSize="@dimen/_11sdp"
                    android:layout_below="@id/faq_ques_seven"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:text="@string/faq_ans_seven"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/faq_background"
                android:layout_marginTop="@dimen/_10sdp"
                android:padding="@dimen/_5sdp">
                <TextView
                    android:id="@+id/faq_ques_eight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lato_bold"
                    android:textColor="@color/App_color_dark_grey"
                    android:textSize="@dimen/_13sdp"
                    android:text="@string/faq_ques_eight"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lato_regular"
                    android:textColor="@color/App_color_dark_grey"
                    android:textSize="@dimen/_11sdp"
                    android:layout_below="@id/faq_ques_eight"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:text="@string/faq_ans_eight"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/faq_background"
                android:layout_marginTop="@dimen/_10sdp"
                android:padding="@dimen/_5sdp">
                <TextView
                    android:id="@+id/faq_ques_nine"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lato_bold"
                    android:textColor="@color/App_color_dark_grey"
                    android:textSize="@dimen/_13sdp"
                    android:text="@string/faq_ques_nine"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lato_regular"
                    android:textColor="@color/App_color_dark_grey"
                    android:textSize="@dimen/_11sdp"
                    android:layout_below="@+id/faq_ques_nine"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:text="@string/faq_ans_nine"
                    />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/faq_background"
                android:layout_marginTop="@dimen/_10sdp"
                android:padding="@dimen/_5sdp">
                <TextView
                    android:id="@+id/faq_ques_ten"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lato_bold"
                    android:textColor="@color/App_color_dark_grey"
                    android:textSize="@dimen/_13sdp"
                    android:text="@string/faq_ques_ten"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lato_regular"
                    android:textColor="@color/App_color_dark_grey"
                    android:textSize="@dimen/_11sdp"
                    android:layout_below="@+id/faq_ques_ten"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:text="@string/faq_ans_ten"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/faq_background"
                android:layout_marginTop="@dimen/_10sdp"
                android:padding="@dimen/_5sdp">
                <TextView
                    android:id="@+id/faq_ques_eleven"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lato_bold"
                    android:textColor="@color/App_color_dark_grey"
                    android:textSize="@dimen/_13sdp"
                    android:text="@string/faq_ques_eleven"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lato_regular"
                    android:textColor="@color/App_color_dark_grey"
                    android:textSize="@dimen/_11sdp"
                    android:layout_below="@+id/faq_ques_eleven"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:text="@string/faq_ans_eleven"/>
            </RelativeLayout>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>